--- a/SimpleBotCore/SimpleBotCore.csproj
+++ b/SimpleBotCore/SimpleBotCore.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
+    <PackageReference Include="Microsoft.Bot.Connector" Version="4.4.4" />
   </ItemGroup>
 
   <ItemGroup>
