add default get

--- a/SimpleBotCore/Properties/launchSettings.json
+++ b/SimpleBotCore/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     "SimpleBotCore": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/messages",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
